@@ -2,14 +2,11 @@ package com.example.demo.product.service.product;
 
 import com.example.demo.common.exception.Setting;
 import com.example.demo.config.s3.S3Uploader;
-
 import com.example.demo.product.controller.category.dto.CategoryResponse;
 import com.example.demo.product.controller.product.dto.ProductRequest;
-import com.example.demo.product.controller.product.dto.ProductResponse;
-
 import com.example.demo.product.domain.entity.category.Category;
-import com.example.demo.product.domain.repository.category.CategoryRepository;
 import com.example.demo.product.domain.entity.product.Product;
+import com.example.demo.product.domain.repository.category.CategoryRepository;
 import com.example.demo.product.domain.repository.product.ProductRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.scheduling.annotation.Async;
@@ -19,7 +16,6 @@ import org.springframework.web.multipart.MultipartFile;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,62 +25,49 @@ public class ProductService {
     private final CategoryRepository categoryRepository;
     private final S3Uploader s3Uploader;
 
-    // 상품 생성
+    // ✅ 상품 생성
     public void createProduct(ProductRequest request, String imageUrl) {
         Category category = getCategory(request);
-        Product product = getProduct(Product.builder(), request, category, imageUrl);
-
+        Product product = buildProduct(Product.builder(), request, category, imageUrl);
         productRepository.save(product);
     }
 
-    // 상품 업데이트
+    // ✅ 상품 수정
     public void updateProduct(Long productId, ProductRequest request, MultipartFile imageFile) {
         Product product = getProduct(productId);
         Category category = getCategory(request);
-        Result result = new Result(product, category);
 
         String imageUrl = s3Uploader.uploadFile(imageFile);
 
-        Product updated = getProduct(Product.builder()
-                .id(result.product().getId()), request, result.category(), imageUrl);
+        Product updated = buildProduct(Product.builder()
+                .id(product.getId()), request, category, imageUrl);
 
         productRepository.save(updated);
     }
 
+    // ✅ 단일 상품 조회
     public Product findById(Long productId) {
         return getProduct(productId);
     }
 
-    @Async
-    public CompletableFuture<String> uploadImageAsync(MultipartFile imageFile) {
-        String imageUrl = s3Uploader.uploadFile(imageFile);
-        return CompletableFuture.completedFuture(imageUrl);
+    // ✅ 태그명으로 상품 조회
+    public List<Product> getProductsByTagName(String tagName) {
+        return productRepository.findByTagName(tagName);
     }
 
-    // 기타 서비스 메서드
-    public List<ProductResponse> getProductsByTagName(String tagName) {
-        return productRepository.findByTagName(tagName).stream()
-                .map(p -> new ProductResponse(p.getId(), p.getName(), p.getDescription(), p.getPrice(), p.getCategory().getName(), p.getTagName(), p.getImage(), p.getImage2()))
-                .collect(Collectors.toList());
+    // ✅ 카테고리별 상품 조회
+    public List<Product> getProductsByCategory(Long categoryId) {
+        return productRepository.findByCategoryId(categoryId);
     }
 
+    // ✅ 전체 카테고리 조회
     public List<CategoryResponse> getAllCategories() {
         return categoryRepository.findAll().stream()
                 .map(cat -> new CategoryResponse(cat.getId(), cat.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<ProductResponse> getProductsByCategory(Long categoryId) {
-        return productRepository.findByCategoryId(categoryId).stream()
-                .map(p -> new ProductResponse(p.getId(), p.getName(), p.getDescription(), p.getPrice(), p.getCategory().getName(), p.getTagName(), p.getImage(), p.getImage2()))
-                .collect(Collectors.toList());
-    }
-
-    public void deleteProduct(Long productId) {
-        Product product = getProduct(productId);
-        productRepository.delete(product);
-    }
-
+    // ✅ 카테고리명 + 태그명 리스트 조회
     public Map<String, Object> getCategoryNameAndTags(Long categoryId) {
         Category category = categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new IllegalArgumentException(String.valueOf(Setting.CATEGORY_NOT_FOUND)));
@@ -97,20 +80,34 @@ public class ProductService {
         );
     }
 
-    // 카테고리 조회
+    // ✅ 상품 삭제
+    public void deleteProduct(Long productId) {
+        Product product = getProduct(productId);
+        productRepository.delete(product);
+    }
+
+    // ✅ 이미지 비동기 업로드
+    @Async
+    public CompletableFuture<String> uploadImageAsync(MultipartFile imageFile) {
+        String imageUrl = s3Uploader.uploadFile(imageFile);
+        return CompletableFuture.completedFuture(imageUrl);
+    }
+
+    // 내부 메서드
     private Category getCategory(final ProductRequest request) {
         return categoryRepository.findById(request.getCategoryId())
                 .orElseThrow(() -> new IllegalArgumentException(Setting.CATEGORY_NOT_FOUND.toString()));
     }
 
-    // 상품 조회
     private Product getProduct(final Long productId) {
         return productRepository.findById(productId)
                 .orElseThrow(() -> new IllegalArgumentException(Setting.PRODUCT_NOT_FOUND.toString()));
     }
 
-    // 상품 빌더
-    private static Product getProduct(final Product.ProductBuilder builder, final ProductRequest request, final Category category, final String imageUrl) {
+    private static Product buildProduct(final Product.ProductBuilder builder,
+                                        final ProductRequest request,
+                                        final Category category,
+                                        final String imageUrl) {
         return builder
                 .name(request.getName())
                 .description(request.getDescription())
@@ -119,9 +116,5 @@ public class ProductService {
                 .tagName(request.getTag())
                 .image(imageUrl)
                 .build();
-    }
-
-    // 결과 클래스 (상품, 카테고리)
-    private record Result(Product product, Category category) {
     }
 }
